# homework1

./: CMakeLists.txt  README.txt  ais_sync.c  ais_sync.h  calculateCollisionRisk.m  collision_risk.c  collision_risk.h  colregs_decision.c  colregs_decision.h  decideEvasiveAction.m  demo_colregs_plot.m  ga-1.m  ga-pareto.m  main.c  path_decision.c  path_decision.h  show.m  verify_cpa.m
